--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -17,7 +17,7 @@ body {
     align-items: center
 }
 .box {
-    width: 800px;
+    width: 90%;
     height: 300px;
     text-align: center;
     color: #c0c0c0; 
